--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 10s linear;
   height: 80px;
 }
 
@@ -16,6 +16,10 @@
 
 .App-intro {
   font-size: large;
+}
+
+.databasIN {
+  font-size: 60px;
 }
 
 @keyframes App-logo-spin {
