--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,3 +1,7 @@
+/** {
+   border: 1px solid red !important;
+}*/
+
 .App {
   text-align: center;
 }
@@ -10,19 +14,19 @@
   margin-left: 20px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
 .databasIN {
   font-size: 60px;
+  margin-top: 10px;
+}
+
+.Input-spreadsheet {
+  font-size: 20px;
+}
+
+
+.Account-list {
+  padding-left: 20px;
+  padding-top: 20px;
 }
 
 @keyframes App-logo-spin {
